# BRobot

./: .gitignore  .gitmodules  BettyGuide.md  Brobot Electrical Diagram.pptx  BruceGuide.md  README.md  Untitled Diagram.drawio  brobot.dockerfile  brobot_base_generic  brobot_camera_test  brobot_camera_test_alpha  brobot_camera_test_beta  parts_list.xlsx
3d printed parts/: battery_tray.SLDPRT  camera_mount.SLDPRT
BraceRootDetection2023/: detection.py  edge_detection.py  poly_point_isect.py  testingscript.py
BraceRootDetection2023/training_model_attempt1/: config.yaml  info.md  launch_training.py
ComputerVisionStuff/: Flir Code to Call Camera.py  Identifying Markers O+Y with Explanation.py  Identifying Markers O+Y.py  Live Stream Test Code.py  Self Driving Still Image.py  Video Analyzation Code Foundation.py  camera_focus_test.py  self driving foundation (1).py  self driving foundation v2.py  self driving foundation.py
ComputerVisionStuff/smurf_code_v2/: RoboClaw.cpp  RoboClaw.h  smurf_code_v2.ino
Deprecated/: l_cam_node.launch.py  project_summary.docx
Deprecated/3d printed parts/: caseBack.SLDPRT  caseFront_v2.SLDPRT
Deprecated/rc_joy/: rc_joy.ino
SpinnakerDocker/: .dockerfile.swp  Dockerfile  dockerfile  dockerfileMelodic
SpinnakerDocker/src/: .install_driver.sh.swp  install_driver.sh
brobot/: .gitignore  CMakeLists.txt  Release Notes  package.xml
brobot/launch/: brobot.launch
brobot/src/: .data_collection.py.kate-swp  .roboclaw_driver.py.kate-swp  DevNotesWinter1  aqtest.sh  brobot.dockerfile  brobotAcquisition.py  brobot_acquisition.py  brobot_acquisition_l.py  brobot_acquisition_r.py  brobot_base  brobot_base_generic  brobot_image_acquisition.py  brobot_launcher  brobot_startup  camera_parameters.yaml  conttrol_panel.py  data_collection.py  joy_driver.py  robotest.sh  (+4 more)
control_panel/: control_panel.ino  conttrol_panel.py
rc_joy/: Button.ino
ros2_ws/src/brobot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/brobot/launch/: brobot.launch.py  camera.test.beta.launch.py  camera.test.launch.py
ros2_ws/src/brobot/src/: brobot_image_acquisition.py  camera_test.py  camera_test_alpha.py  camera_test_beta.py  control_panel.py  joy_driver2.py  roboclaw_driver.py
ros2_ws/src/brobot/src/utils/roboclaw_python/: roboclaw.py  roboclaw_3.py  roboclaw_bareminimum.py  roboclaw_simplepwm.py
(+291 files in other folders)
